profile update done

--- a/Tattoojocky/app/src/main/AndroidManifest.xml
+++ b/Tattoojocky/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -87,7 +89,13 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".profile.ProfileScreen"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".profile.ProfileEditActivity"
+            android:label="@string/edit"
+            android:parentActivityName=".profile.ProfileScreen"
+            android:theme="@style/AppTheme">
+
+        </activity>
     </application>
 
 </manifest>
