--- a/Tattoojocky/app/build.gradle
+++ b/Tattoojocky/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
@@ -19,9 +20,14 @@ android {
     }
 }
 
+repositories{
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile "commons-io:commons-io:+"
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
@@ -40,9 +46,13 @@ dependencies {
     compile 'org.jetbrains:annotations-java5:15.0'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+   // compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.google.android.gms:play-services-ads:9.4.0'
+    compile 'com.wdullaer:materialdatetimepicker:3.0.0'
+    compile 'com.jakewharton:butterknife:8.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    compile project(path: ':facebook')
 }
 
 apply plugin: 'com.google.gms.google-services'
