--- a/Tattoojocky/app/build.gradle
+++ b/Tattoojocky/app/build.gradle
@@ -20,14 +20,14 @@ android {
     }
 }
 
-repositories{
+repositories {
     mavenCentral()
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile "commons-io:commons-io:+"
+    compile 'commons-io:commons-io:+'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
@@ -46,13 +46,15 @@ dependencies {
     compile 'org.jetbrains:annotations-java5:15.0'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-messaging:9.4.0'
-   // compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.firebase:firebase-ads:9.4.0'
+    // compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.commit451:PhotoView:1.2.5'
-    compile 'com.google.android.gms:play-services-ads:9.4.0'
     compile 'com.wdullaer:materialdatetimepicker:3.0.0'
     compile 'com.jakewharton:butterknife:8.1.0'
     apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile project(path: ':facebook')
+    compile 'com.google.android.gms:play-services-ads:9.4.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
